<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#76CBD6"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/textExer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:contextClickable="false"
        android:elegantTextHeight="true"
        android:text="@string/text_last_exercise"
        android:textAlignment="textEnd"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/Usershow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/text_bemvindo"
        android:textAlignment="viewEnd"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSchedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="#404040"
        android:text="@string/button_schedule"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.988"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.07" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="413dp"
        android:layout_height="274dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textExer">

        <Button
            android:id="@+id/buttonExercise1"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:backgroundTint="#66FFFFFF"
            android:text="@string/button_exercise1"
            android:textColor="#000000" />

        <Button
            android:id="@+id/buttonExercise2"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:backgroundTint="#66FFFFFF"
            android:text="@string/button_exercise2"
            android:textColor="#000000" />

        <Button
            android:id="@+id/buttonExercise3"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:backgroundTint="#66FFFFFF"
            android:text="@string/button_exercise3"
            android:textColor="#000000" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/Usershow"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/Usershow"
        app:layout_constraintTop_toBottomOf="@+id/Usershow" />

</androidx.constraintlayout.widget.ConstraintLayout>