<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#76CBD6"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="329dp"
        android:layout_height="223dp"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="228dp"
        android:background="#9AFFFFFF"
        android:backgroundTint="#BCF4F4F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

    </FrameLayout>

    <CheckBox
        android:id="@+id/checkBoxRemember"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:text="@string/remenber_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="@+id/EnterPass"
        app:layout_constraintStart_toStartOf="@+id/EnterPass"
        app:layout_constraintTop_toBottomOf="@+id/EnterPass" />

    <EditText
        android:id="@+id/EnterPass"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:backgroundTint="#66FFFFFF"
        android:ems="10"
        android:hint="@string/senha_hint"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/EnterUser"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/EnterUser"
        app:layout_constraintTop_toBottomOf="@+id/EnterUser"
        android:autofillHints="" />

    <EditText
        android:id="@+id/EnterUser"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:background="@color/white"
        android:backgroundTint="#66FFFFFF"
        android:ems="10"
        android:hint="@string/Usuario_hint"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="152dp"
        android:backgroundTint="#404040"
        android:text="@string/button_login_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/frameLayout" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/trabalho_1_removebg_preview"
        android:contentDescription="@string/Photo" />

</androidx.constraintlayout.widget.ConstraintLayout>